# SSFv2

./: CMakeLists.txt  main.cpp
compiled/: SSFv2  info
include/: background.h  enemy.h  enemybullet.h  explosion.h  game.h  hit.h  menu.h  player.h  playerbullet.h
src/: background.cpp  enemy.cpp  enemybullet.cpp  explosion.cpp  game.cpp  hit.cpp  menu.cpp  player.cpp  playerbullet.cpp
